@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* >snakeoil-0.3.4 is required for this release.
+
 * key is reused as cpvstr for memory savings where possible in cpv
   extension objects.
 
